--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <title>Brick city! Maintenance</title>
-	
+
     <style>
       @font-face {
         src: url(/fonts/Ubahn.ttf);
@@ -30,9 +30,11 @@
     </style>
   </head>
   <body>
-<img src="https://media.discordapp.net/attachments/737374477251510285/738166436811374723/something.png" height="100">
+<img src="https://cdn.discordapp.com/attachments/742228111558705152/742240747633377411/BCL-final.png" height="100">
 
       <div>Brick City is offline for devloment reasons, come again another day.</div>
 
+  </body>
+</html>
   </body>
 </html>
