--- a/main.html
+++ b/main.html
@@ -121,6 +121,7 @@ a:hover {
 				"<i class='fas fa-users'></i> Users" => "/users",
 				"<i class='fas fa-comment-alt'></i> Forum" => "/forum",
 				"<i class='fas fa-user-friends'></i> Cults" => "/community",
+                               <a href="https://wtnickk.github.io/brickcity/signup" Signup />
 			],
 			"right" => [
 				($notifications > 0) ? "<i class='fas fa-bell'></i> Notifications ({$notifications})" : "<i class='fas fa-bell'></i> Notifications" => "/notifications",
