--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@ enable_page_level_ads: true
 		</div>
 		<div class="card b">
 			<div class="top centered" style="background-color:#f3c133;">
-				Announcements
+				News
 			</div>
 			<div style="padding: 20px;font-size:1.2rem;">
 			<a style="color:#000;" href="https://blog.vertineer.com/welcome-to-our-blog/">Welcome to Our Blog</a>
