--- a/banned.html
+++ b/banned.html
@@ -41,7 +41,7 @@ require("/var/www/html/site/header.php");
     <div class="top"></div>
     <div class="body centered">
 	<p><h1><?=$levels[$banned->level]?></h1><p>
-      <p>Our content monitors have determined that your behavior at Vertineer has been in violation of our Terms of Service.<p>
+      <p>Our admins have determined that your behavior at Brick city has been in violation of our Terms of Service.<p>
       <p>Reviewed: <?=nl2br(htmlentities($banned->created))?><p>
 	  <b>Moderator Note: <?=nl2br(htmlentities($banned->msg))?></b>
       <br><br>
