--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <img src="https://cdn.discordapp.com/attachments/742228111558705152/742240747633377411/BCL-final.png" height="100">
 
       <div>Brick City is offline for development  reasons, come again another day.</div>
-    <a href="https://wtnickk.github.io/whyyoushouldjoinbc/">Why should you join brick-city?</a>
+    <a href="https://wtnickk.github.io/brickcity/wjbc.html>Why should you join brick-city?</a>
 
   </body>
 </html>
