--- a/Landing.html
+++ b/Landing.html
@@ -11,12 +11,12 @@ Landing - Brick-city
 <style>
 h1 {
   background-color: white;
-  color: purple;
+  color: white;
   font-family: Verdana;
   height: 100px;
-  width: 899px;
+  width: 999px;
   border-radius: 25px;
-  background: #73AD21;
+  background: #800080;
   padding: 20px;
 }
 </style>
