--- a/Landing.html
+++ b/Landing.html
@@ -5,6 +5,7 @@ Landing - Brick-city
 </title>
 
 <body>
+  <center>
 <h1>Brick City</h1>
 <p> The block sandbox worth living for <p>
 <a href="https://wtnickk.github.io/brickcity/signup2.html" Sign Up! </a>
@@ -20,6 +21,7 @@ h1 {
   padding: 20px;
 }
 </style>
+  </center>
 </body>
 
 <html>
