--- a/Landing.html
+++ b/Landing.html
@@ -8,18 +8,18 @@ Landing - Brick-city
   <center>
 <h1>Brick City</h1>
 <p> The block sandbox worth living for <p>
-<a href="https://wtnickk.github.io/brickcity/signup2.html" Sign Up! </a>
+<a href="https://wtnickk.github.io/brickcity/signup2.html"</a> Sign up
 <style>
 h1 {
-  background-color: white;
+  background-color: black;
   color: white;
   font-family: Verdana;
   height: 100px;
-  width: 1200px;
+  width: 1300px;
   border-radius: 25px;
   background: #800080;
   padding: 20px;
-}
+  }
 </style>
   </center>
 </body>
