--- a/Landing.html
+++ b/Landing.html
@@ -20,6 +20,13 @@ h1 {
   background: #800080;
   padding: 20px;
   }
+  
+  body {
+    background-color: black;
+    color: black;
+    font family: Verdanna;
+    background: #000000;
+  }
 </style>
   </center>
 </body>
