--- a/Landing.html
+++ b/Landing.html
@@ -15,7 +15,7 @@ h1 {
   color: white;
   font-family: Verdana;
   height: 100px;
-  width: 1400px;
+  width: 1300px;
   border-radius: 25px;
   background: #800080;
   padding: 20px;
@@ -25,7 +25,7 @@ h1 {
     background-color: black;
     color: black;
     font family: Verdanna;
-    background: #000000;
+    background: #4d4845;
   }
 </style>
   </center>
