--- a/Landing.html
+++ b/Landing.html
@@ -9,6 +9,7 @@ Landing - Brick-city
 <h1>Brick City</h1>
 <p> The block sandbox worth living for <p>
 <a href="https://wtnickk.github.io/brickcity/signup2.html"</a> Sign up
+    <a href="https://discord.gg/eaT8TEey"</a> Join Our Discord!
     <blockquote class="imgur-embed-pub" lang="en" data-id="a/vAvINzG" data-context="false" ><a href="//imgur.com/a/vAvINzG"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
 <style>
 h1 {
