--- a/Dashboard2.html
+++ b/Dashboard2.html
@@ -10,6 +10,9 @@ Home - Brick-city
 <a href="https://wtnickk.github.io/brickcity/forum2.html" Forum</a> 
 <a href="https://discord.gg/eaT8TEey" Discord</a>
 </h1>
+    <a href="https://discord.gg/eaT8TEey" Discord</a>
+    <a href="https://wtnickk.github.io/brickcity/forum2.html" Forum</a> 
+
 <p> Welcome (name here) <p>
     <h2>You</h2>
 <style>
@@ -34,7 +37,7 @@ h1 {
   background-color: black;
   color: white;
   font-family: Verdana;
-  height: 130px;
+  height: 140px;
   width: 130px;
   border-radius: 25px;
   background: #100080;
